css/zaba.css
@font-face {
	font-family: 'title-font';
	/*src: url('../fonts/JosefinSans-Regular.ttf');*/
	src: url('../fonts/ENGR.ttf');
}

t {
    font-family: 'title-font';
    color: #ffffff;
    text-align: center;
	text-shadow: 0px 0px 10px black;	
    font-size: 50px;
    display: grid;
}

@media only screen and (max-width: 650px) {
    t { font-size: 40px; }
}

@media only screen and (max-width: 450px) {
    t { font-size: 30px; }
}

/* ****************************************************
FOOTER STICK BOTTOM */


html {
	height: 100%;
}

body {
	display: flex;
	flex-direction: column;
	height: 100%;
}

.zaba-content {
	flex: 1 0 auto;
}
footer {
	flex-shrink: 0;
}

#footer-icon {
	padding: 5px;
}

/* ****************************************************
OVERRIDE UIKIT */

.uk-navbar-nav>li:hover>a, .uk-navbar-nav>li>a.uk-open, .uk-navbar-nav>li>a:focus {
	color: #666;
	outline: 0;
}

.uk-navbar-item, .uk-navbar-nav>li>a, .uk-navbar-toggle {
    display: flex;
    justify-content: center;
    align-items: center;
    box-sizing: border-box;
    min-height: 50px;
    padding: 0 15px;
    font-size: .875rem;
    font-family: -apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,"Helvetica Neue",Arial,sans-serif;
    text-decoration: none;
}

